[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Quests/QuestGivers/mob-boss_01.png" type="Texture" id=1]
[ext_resource path="res://scenes/Quests/Brainstorming/CharacterInfo.gd" type="Script" id=2]

[node name="CharacterInfo" type="Node2D"]
position = Vector2( 99, 154 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 1 )
texture = ExtResource( 1 )

[node name="CharacterInfoPanel" type="PanelContainer" parent="."]
margin_left = 54.9995
margin_top = 130.0
margin_right = 382.0
margin_bottom = 402.0
rect_scale = Vector2( 3.14083, 3.14083 )

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterInfoPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 320.0
margin_bottom = 387.0

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterInfoPanel/VBoxContainer"]
margin_right = 313.0
margin_bottom = 64.0

[node name="CharacterName" type="Label" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer"]
margin_top = 16.0
margin_right = 154.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "CharacterName
"
autowrap = true

[node name="CharacterImage" type="TextureRect" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 313.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HBoxContainer2" type="HBoxContainer" parent="CharacterInfoPanel/VBoxContainer"]
margin_top = 68.0
margin_right = 313.0
margin_bottom = 258.0

[node name="LeftSide" type="VBoxContainer" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 190.0

[node name="DescriptionLabel" type="Label" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2/LeftSide"]
margin_right = 150.0
margin_bottom = 14.0
mouse_filter = 1
text = "Description"

[node name="DescriptionTextEdit" type="TextEdit" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2/LeftSide"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 93.0
rect_min_size = Vector2( 150, 75 )

[node name="RelationshipsLabel" type="Label" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2/LeftSide"]
margin_top = 97.0
margin_right = 150.0
margin_bottom = 111.0
mouse_filter = 1
text = "Relationships"

[node name="RelationshipsTextEdit" type="TextEdit" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2/LeftSide"]
margin_top = 115.0
margin_right = 150.0
margin_bottom = 190.0
rect_min_size = Vector2( 150, 75 )

[node name="RightSide" type="VBoxContainer" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 313.0
margin_bottom = 190.0

[node name="MotiveOpportunity" type="Label" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2/RightSide"]
margin_right = 159.0
margin_bottom = 14.0
mouse_filter = 1
text = "Motives and Opportunity"

[node name="MotiveOpportunityTextEdit" type="TextEdit" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2/RightSide"]
margin_top = 18.0
margin_right = 159.0
margin_bottom = 93.0
rect_min_size = Vector2( 150, 75 )

[node name="Corroboration" type="Label" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2/RightSide"]
margin_top = 97.0
margin_right = 159.0
margin_bottom = 111.0
hint_tooltip = "Alibis, Witnesses, Calendar, Schedule.
Reasons why the character must have been or could not have been present at the time of the incident."
mouse_filter = 1
text = "Corroboration"

[node name="CorroborationTextEdit" type="TextEdit" parent="CharacterInfoPanel/VBoxContainer/HBoxContainer2/RightSide"]
margin_top = 115.0
margin_right = 159.0
margin_bottom = 190.0
rect_min_size = Vector2( 150, 75 )

[node name="CluesLabel" type="Label" parent="CharacterInfoPanel/VBoxContainer"]
margin_top = 262.0
margin_right = 313.0
margin_bottom = 276.0
text = "Clues"

[node name="CluesTextEdit" type="TextEdit" parent="CharacterInfoPanel/VBoxContainer"]
margin_top = 280.0
margin_right = 313.0
margin_bottom = 380.0
rect_min_size = Vector2( 150, 100 )
size_flags_horizontal = 3
